web/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gotak
  labels:
    name: gotak
    app.kubernetes.io/name: gotak
    app.kubernetes.io/component: tactical-awareness
---
