web/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gotak-web
  namespace: gotak
  labels:
    app.kubernetes.io/name: gotak-web
    app.kubernetes.io/component: web-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: gotak-web
    app.kubernetes.io/component: web-ui
---
apiVersion: v1
kind: Service
metadata:
  name: gotak-web-nodeport
  namespace: gotak
  labels:
    app.kubernetes.io/name: gotak-web
    app.kubernetes.io/component: web-ui
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: gotak-web
    app.kubernetes.io/component: web-ui
---
